<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Alert Score">
		<CheckBoxPreference android:title="Enable Toast"
			android:defaultValue="true" android:summary="Display runs on screen"
			android:key="checkboxToast" />
		<CheckBoxPreference android:title="Enable Notification"
			android:defaultValue="true" android:summary="Shows runs in notification"
			android:key="checkboxNotify" />
	</PreferenceCategory>
	<PreferenceCategory android:title="Internet Settings">
		<ListPreference android:title="Refresh Time"
			android:summary="Select refresh interval for updating score"
			android:key="refreshTime" android:defaultValue="20000"
			android:entries="@array/update_freq" android:entryValues="@array/update_freq_time" />
	</PreferenceCategory>

	<PreferenceCategory android:title="Auto SMS">
		<CheckBoxPreference android:title="Enable Auto SMS"
			android:defaultValue="false" android:summary="Update your friends via SMS"
			android:key="checkboxSMS" />
		<ListPreference android:title="Update when"
			android:summary="Select when to update your friends"
			android:key="smsUpdate" android:defaultValue="2"
			android:entries="@array/sms_update" android:entryValues="@array/sms_update_mode" />
	</PreferenceCategory>

	<PreferenceCategory android:title="SMS and Internet Usage">
		<Preference android:title="SMS sent" android:key="smsSent"
			android:selectable="false" android:summary="0" />
		<Preference android:title="Total SMS sent" android:key="totalSmsSent"
			android:selectable="false" android:summary="0" />
		<Preference android:title="Bandwidth Used" android:key="internetUsage"
			android:selectable="false" />
		<Preference android:title="Total Bandwidth Used"
			android:key="internetUsageTotal" android:selectable="false" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/info_about">
		<Preference android:title="Version" android:summary="@string/info_version_no"
			android:key="app_version" android:selectable="false" />
		<Preference android:title="Release date" android:summary="@string/info_release_date"
			android:key="app_date" android:selectable="false" />
		<Preference android:title="@string/info_about_twitter"
			android:summary="@string/info_about_twitter_id" android:key="app_twitter_id"/>
	</PreferenceCategory>

</PreferenceScreen>

