<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/black"
	android:scrollbars="none" android:gravity="top" android:layout_gravity="center"
	android:textColor="@color/white" >
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center">
		<TableRow>
			<ImageView android:src="@drawable/icon"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_gravity="center" android:paddingRight="@dimen/small_padding" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/cric_score"
				android:textSize="@dimen/large_text"
				android:layout_gravity="center"
				android:paddingLeft="@dimen/small_padding" />
		</TableRow>
	</TableLayout>
	<View android:layout_height="@dimen/hr_dimen3" android:background="@color/black"
		android:layout_width="fill_parent" />
	<View android:layout_height="@dimen/hr_dimen" android:background="@color/white"
		android:layout_width="fill_parent" />
	<View android:layout_height="@dimen/hr_dimen3" android:background="@color/black"
		android:layout_width="fill_parent" />
		
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center"
		android:stretchColumns="1" >
		<TableRow>
			<TextView android:id="@+id/textView1" android:layout_height="wrap_content"
				android:paddingLeft="@dimen/small_padding" android:text="@string/info_version"
				android:layout_width="wrap_content" android:layout_column="1"
				android:textSize="@dimen/normal_text"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/info_version_no"
				android:textColor="@color/white" android:paddingLeft="@dimen/small_padding"
				android:textSize="@dimen/normal_text" />
		</TableRow>
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/info_release"
				android:layout_column="1" android:paddingLeft="@dimen/small_padding"
				android:textSize="@dimen/normal_text" />
			<TextView android:id="@+id/textView2" android:layout_height="wrap_content"
				android:paddingLeft="@dimen/small_padding" android:text="@string/info_release_date"
				android:textColor="@color/white" android:layout_width="wrap_content"
				android:textSize="@dimen/normal_text"></TextView>
		</TableRow>
	</TableLayout>
	<View android:layout_height="@dimen/hr_dimen3" android:background="@color/black"
		android:layout_width="fill_parent" />
	<View android:layout_height="@dimen/hr_dimen" android:background="@color/white"
		android:layout_width="fill_parent" />
	<View android:layout_height="@dimen/hr_dimen3" android:background="@color/black"
		android:layout_width="fill_parent" />
	<TextView android:text="@string/info_total"
		android:textSize="@dimen/normal_text" android:background="@color/white"
		android:textColor="@color/black"
		android:layout_width="fill_parent" android:layout_height="wrap_content"  android:gravity="center"  />
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center"
		android:stretchColumns="1" >
		<TableRow>
			<TextView android:id="@+id/textView1" android:layout_height="wrap_content"
				android:paddingLeft="@dimen/small_padding" android:text="@string/info_request"
				android:layout_width="wrap_content" android:layout_column="1"
				android:textSize="@dimen/normal_text"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="0"
				android:textColor="@color/white" android:paddingLeft="@dimen/small_padding"
				android:textSize="@dimen/normal_text" android:id="@+id/global_hits"/>
		</TableRow>
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/info_usage"
				android:layout_column="1" android:paddingLeft="@dimen/small_padding"
				android:textSize="@dimen/normal_text" />
			<TextView android:layout_height="wrap_content"
				android:paddingLeft="@dimen/small_padding" android:text="0 kB"
				android:textColor="@color/white" android:layout_width="wrap_content"
				android:textSize="@dimen/normal_text"  android:id="@+id/global_usage"></TextView>
		</TableRow>
	</TableLayout>
	<View android:layout_height="@dimen/hr_dimen3" android:background="@color/black"
		android:layout_width="fill_parent" />
	<View android:layout_height="@dimen/hr_dimen" android:background="@color/white"
		android:layout_width="fill_parent" />
	<View android:layout_height="@dimen/hr_dimen3" android:background="@color/black"
		android:layout_width="fill_parent" />
	<TextView android:text="@string/info_session"
		android:textSize="@dimen/normal_text" android:background="@color/white"
		android:textColor="@color/black"
		android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center"/>
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:gravity="center"
		android:stretchColumns="1">
		<TableRow>
			<TextView android:layout_height="wrap_content"
				android:paddingLeft="@dimen/small_padding" android:text="@string/info_request"
				android:layout_width="wrap_content" android:layout_column="1"
				android:textSize="@dimen/normal_text"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="0"
				android:textColor="@color/white" android:paddingLeft="@dimen/small_padding"
				android:textSize="@dimen/normal_text"  android:id="@+id/local_hits" />
		</TableRow>
		<TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/info_usage"
				android:layout_column="1" android:paddingLeft="@dimen/small_padding"
				android:textSize="@dimen/normal_text" />
			<TextView android:layout_height="wrap_content"
				android:paddingLeft="@dimen/small_padding" android:text="0 kB"
				android:textColor="@color/white" android:layout_width="wrap_content"
				android:textSize="@dimen/normal_text"  android:id="@+id/local_usage" ></TextView>
		</TableRow>
	</TableLayout>
</LinearLayout>

