<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/gray"
	android:gravity="top">

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/big_text" 
		android:padding="@dimen/medium_padding"
		android:id="@+id/title" 
		android:gravity="center"
		android:textColor="@color/black"
		android:background="@color/white"
		android:text="@string/title_val"
        android:ellipsize="marquee" 
        android:marqueeRepeatLimit="3"
        android:scrollHorizontally="true" 
        android:focusable="true" 
        android:focusableInTouchMode="true" 
        android:singleLine="true"
		/>
	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:background="@color/black"
		android:scrollbars="none" android:gravity="center"
		android:layout_gravity="center">
		<TableLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:gravity="center">
			<TableRow>
				<ImageView android:src="@drawable/icon"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:layout_gravity="center" android:paddingRight="@dimen/small_padding" />
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/cric_score"
					android:textSize="@dimen/large_text" android:textColor="@color/white"
					android:layout_gravity="center_horizontal|center_vertical"
					android:paddingLeft="@dimen/small_padding" />
			</TableRow>
			<TableRow>
			
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text=" "
			android:layout_gravity="center" />
			
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/loading3"
			android:textSize="@dimen/small_text" android:id="@+id/loading"
			android:textColor="@color/white" android:layout_gravity="center" />
			</TableRow>
		</TableLayout>

	</LinearLayout>
</LinearLayout>